# ComputerComponentsDesktopApp

./: .gitignore  CMakeLists.txt  readme.md
res/: resources.qrc
src/: Consts.cpp  Consts.hpp  Notifier.hpp  Util.cpp  Util.hpp  Util.tpp  main.c  main.cpp
src/model/: AppState.cpp  AppState.hpp  Component.cpp  Component.hpp  Network.cpp  Network.hpp
src/state/: AppState.cpp  AppState.hpp  ComponentListItemState.cpp  ComponentListItemState.hpp  ImageDisplayableState.cpp  ImageDisplayableState.hpp  ImageDisplayingState.cpp  ImageDisplayingState.hpp  LoginState.cpp  LoginState.hpp  MessageDispatcher.cpp  MessageDispatcher.hpp  OrdersState.cpp  OrdersState.hpp  PhoneValidator.hpp  SelectState.cpp  SelectState.hpp
src/ui/: AboutWidget.cpp  AboutWidget.hpp  AbsPrimaryWidget.hpp  AbsWidget.hpp  AppBar.cpp  AppBar.hpp  AppBarWidget.cpp  AppBarWidget.hpp  BaseComponentListWidget.cpp  BaseComponentListWidget.hpp  ComponentDetailsWidget.cpp  ComponentDetailsWidget.hpp  ComponentListItem.cpp  ComponentListItem.hpp  ComponentListItemWidget.cpp  ComponentListItemWidget.hpp  HistoryWidget.cpp  HistoryWidget.hpp  HomeWidget.cpp  HomeWidget.hpp  IWindowShared.hpp  LoginWidget.cpp  LoginWidget.hpp  MainWindow.cpp  MainWindow.hpp  MessageDisplayableWidget.cpp  MessageDisplayableWidget.hpp  OrdersWidget.cpp  OrdersWidget.hpp  SelectWidget.cpp  SelectWidget.hpp  UIConsts.cpp  UIConsts.hpp
